--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,4 +2,4 @@ steps:
 - name: 'gcr.io/cloud-builders/npm'
   args: ['install']
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: ['beta', 'functions', 'deploy', 'btcPrice', '--runtime nodejs8', '--trigger-http']
+  args: ['beta', 'functions', 'deploy', 'btcPrice', '--runtime', 'nodejs8', '--trigger-http']
