--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
   "dependencies": {
     "@slack/client": "^4.3.1",
     "axios": "^0.18.0",
+    "circular-json": "^0.5.5",
     "extend": "^3.0.2",
     "slackbots": "^1.1.0"
+  },
+  "devDependencies": {
+    "@webtask/serverless-webtasks": "^1.0.1",
+    "string-replace-webpack-plugin": "^0.1.3",
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0"
   }
 }
